--- a/card_point_revision.ipynb
+++ b/card_point_revision.ipynb
@@ -6737,12 +6737,12 @@
    "source": [
     "# Now assign points based on the related column but scale it with MinMaxScaler\n",
     "# card_deck = revise_point_values(card_deck, max_points=50)\n",
-    "scaler = MinMaxScaler(feature_range=(0, 50))\n",
+    "scaler = MinMaxScaler(feature_range=(0, 20))\n",
     "# read card_deck from ppn_deck.json file\n",
     "with open(\"ppn_deck.json\", \"r\") as read_file:\n",
     "    card_deck = json.load(read_file)\n",
     "\n",
-    "def revise_point_values(card_deck, max_points=50):\n",
+    "def revise_point_values(card_deck, max_points=20):\n",
     "    # Initialize a dictionary to store the word counts for each card\n",
     "    word_counts = {}\n",
     "    # Initialize a list to store the word counts for each card\n",
@@ -6815,7 +6815,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "import pandas as pd\n",
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "scaler = MinMaxScaler(feature_range=(0, 20))\n",
+    "\n",
+    "with open(\"ppn_deck.json\", \"r\") as read_file:\n",
+    "    card_deck = json.load(read_file)\n",
+    "\n",
+    "def revise_point_values(card_deck, max_points=20):\n",
+    "    stop_words = stopwords.words(\"english\")\n",
+    "    card_id = 0\n",
+    "    related_words = []\n",
+    "    for card in card_deck:\n",
+    "        summary_text = card['summary'][1]\n",
+    "        words = summary_text.split()\n",
+    "        nonstop_words = [word for word in words if word not in stop_words]\n",
+    "        word_count = len(nonstop_words)\n",
+    "        try:\n",
+    "            related_words.append(int(card['related']))\n",
+    "        except:\n",
+    "            related_words.append(0)\n",
+    "        card_id += 1\n",
+    "    scaled_word_counts = scaler.fit_transform(pd.DataFrame(related_words))\n",
+    "    card_id = 0\n",
+    "    for card in card_deck:\n",
+    "        try:\n",
+    "            scaled_word_count = scaled_word_counts[card_id]\n",
+    "            related_words = int(card['related'])\n",
+    "            rounded_value = int(scaled_word_count[0])\n",
+    "        except:\n",
+    "            related_words = 0\n",
+    "            rounded_value = 0\n",
+    "        try:\n",
+    "            card['point_value'] = max(rounded_value, related_words)\n",
+    "        except Exception:\n",
+    "            pass\n",
+    "        card_id += 1\n",
+    "    return card_deck\n",
+    "\n",
+    "card_deck = revise_point_values(card_deck, max_points=50)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -6927,7 +6977,7 @@
        "4                                                NaN          271  "
       ]
      },
-     "execution_count": 232,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
