better-summarization: Updated

--- a/refactored_card_creator.ipynb
+++ b/refactored_card_creator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -196,21 +196,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'title': 'Back to the Future', 'summary': 'Back to the Future, Back to the Future is a 1985 American science fiction film directed by Robert Zemeckis, and written by Zemeckis and Bob Gale. It stars Michael J. Fox, Christopher Lloyd, Lea Thompson, Crispin Glover, and Thomas F. Wilson. Set in 1985, the story follows Marty McFly Fox, a teenager accidentally sent back to 1955 in a time-traveling DeLorean automobile built by his eccentric scientist friend Emmett Doc Brown Lloyd. While in the past, Marty inadvertently prevents his future parents from falling in lovethreatening his existenceand is forced to reconcile the pair and somehow get back to the future.\\\\nGale and Zemeckis conceived the idea for Back to the Future in 1980. They were desperate for a successful film after numerous collaborative failures, but the project was rejected over 40 times by various studios because it was not considered raunchy enough to compete with the successful comedies of the era. A development deal was secured with Universal Pictures following Zemeckiss success directing Romancing the Stone 1984. Fox was the first choice to portray Marty but was unavailable; Eric Stoltz was cast instead. Shortly after principal photography began in November 1984, Zemeckis determined Stoltz was not right for the part and made the concessions necessary to hire Fox, including re-filming scenes already shot with Stoltz and adding $4 million to the budget. Back to the Future was filmed in and around California and on sets at Universal Studios. Filming concluded the following April.\\\\nFollowing highly successful test screenings, the release date was brought forward to July 3, 1985, giving Back to the Future more time in theaters during the busiest period of the theatrical year. The change resulted in a rushed post-production schedule and some incomplete special effects. Back to the Future was a critical and commercial success, earning $381.1 million to become the highest-grossing film of 1985 worldwide. Critics praised the story, humorous elements, and the castparticularly Fox, Lloyd, Thompson, and Glover. It received multiple award nominations and won an Academy Award, three Saturn Awards, and a Hugo Award. Its theme song, The Power of Love by Huey Lewis and the News, was also a success.\\\\nBack to the Future has since grown in esteem and is now considered by critics and audiences to be one of the greatest science-fiction films and among the best films ever made. In 2007, the United States Library of Congress selected the film for preservation in the National Film Registry. The film was followed by two sequels, Back to the Future Part II 1989 and Back to the Future Part III 1990. Spurred by the films dedicated fan following and effect on popular culture, Universal Studios launched a multimedia franchise, which now includes video games, theme park rides, an animated television series, and a stage musical. Its enduring popularity has prompted numerous books about its production, documentaries, and commercials.\\\\n\\\\n', 'related': 669, 'summary_short': 'Back to the Future, Back to the Future is a 1985 American science fiction film directed by Robert Zemeckis, and written by Zemeckis and Bob Gale. It stars Michael J. Fox, Christopher Lloyd, Lea Thompson, Crispin Glover, and Thomas F. Wilson. Set in 1985, the story follows Marty McFly Fox, a teenager accidentally sent back to 1955 in a time-traveling DeLorean automobile built by his eccentric scientist friend Emmett Doc Brown Lloyd. While in the past, Marty inadvertently prevents his future parents from falling in lovethreatening his existenceand is forced to reconcile the pair and somehow get back to the future.\\\\nGale and Zemeckis conceived the idea for Back to the Future in 1980. They were desperate for a successful film after numerous collaborative failures, but the project was rejected over 40 times by various studios because it was not considered raunchy enough to compete with the successful comedies of the era. A development deal was secured with Universal Pictures following Zemeckiss success directing Romancing the Stone 1984. Fox was the first choice to portray Marty but was unavailable; Eric Stoltz was cast instead. Shortly after principal photography began in November 1984, Zemeckis determined Stoltz was not right for the part and made the concessions necessary to hire Fox, including re-filming scenes already shot with Stoltz and adding $4 million to the budget. Back to the Future was filmed in and around California and on sets at Universal Studios. Filming concluded the following April.\\\\nFollowing highly successful test screenings, the release date was brought forward to July 3, 1985, giving Back to the Future more time in theaters during the busiest period of the theatrical year. The change resulted in a rushed post-production schedule and some incomplete special effects. Back to the Future was a critical and commercial success, earning $381.1 million to become the highest-grossing film of 1985 worldwide. Critics praised the story, humorous elements, and the castparticularly Fox, Lloyd, Thompson, and Glover. It received multiple award nominations and won an Academy Award, three Saturn Awards, and a Hugo Award. Its theme song, The Power of Love by Huey Lewis and the News, was also a success.\\\\nBack to the Future has since grown in esteem and is now considered by critics and audiences to be one of the greatest science-fiction films and among the best films ever made. In 2007, the United States Library of Congress selected the film for preservation in the National Film Registry. The film was followed by two sequels, Back to the Future Part II 1989 and Back to the Future Part III 1990. Spurred by the films dedicated fan following and effect on popular culture, Universal Studios launched a multimedia franchise, which now includes video games, theme park rides, an animated television series, and a stage musical. Its enduring popularity has prompted numerous books about its production, documentaries, and commercials.\\\\n\\\\n', 'summary_clean': nan, 'point_value': 669}\n"
+      "{'title': 'Buckwheat Boyz', 'summary': 'Buckwheat Boyz, The Buckwheat Boyz was an American novelty group founded by Marcus Bowens and Jermaine Fuller, with the later addition of J.J. ONeal and Dougy Williams. The Buckwheat Boyz were signed by Koch Records, and recorded their first and only full-length record. The 2001 single Peanut Butter Jelly Time from this self-titled debut album became a popular internet meme after a Flash-animated music video featuring a dancing banana garnered attention online. The popularity of the song increased as it was featured on television series such as The Proud Family and Family Guy, and fellow Flash-animated series including Super Mario Bros. Z.', 'related': 23, 'summary_short': 'Buckwheat Boyz, The Buckwheat Boyz was an American novelty group founded by Marcus Bowens and Jermaine Fuller, with the later addition of J.J. ONeal and Dougy Williams. The Buckwheat Boyz were signed by Koch Records, and recorded their first and only full-length record. The 2001 single Peanut Butter Jelly Time from this self-titled debut album became a popular internet meme after a Flash-animated music video featuring a dancing banana garnered attention online. The popularity of the song increased as it was featured on television series such as The Proud Family and Family Guy, and fellow Flash-animated series including Super Mario Bros. Z.', 'summary_clean': nan, 'point_value': 23}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 22%|██▏       | 1470/6803 [00:42<02:41, 33.08it/s]"
+      "  6%|▋         | 439/6803 [00:14<02:28, 42.79it/s]"
      ]
     }
    ],
