--- a/refactored_card_creator.ipynb
+++ b/refactored_card_creator.ipynb
@@ -6,6 +6,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.9/site-packages/requests/__init__.py:89: RequestsDependencyWarning: urllib3 (1.26.13) or chardet (3.0.4) doesn't match a supported version!\n",
+      "  warnings.warn(\"urllib3 ({}) or chardet ({}) doesn't match a supported \"\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -203,14 +211,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'title': 'Buckwheat Boyz', 'summary': 'Buckwheat Boyz, The Buckwheat Boyz was an American novelty group founded by Marcus Bowens and Jermaine Fuller, with the later addition of J.J. ONeal and Dougy Williams. The Buckwheat Boyz were signed by Koch Records, and recorded their first and only full-length record. The 2001 single Peanut Butter Jelly Time from this self-titled debut album became a popular internet meme after a Flash-animated music video featuring a dancing banana garnered attention online. The popularity of the song increased as it was featured on television series such as The Proud Family and Family Guy, and fellow Flash-animated series including Super Mario Bros. Z.', 'related': 23, 'summary_short': 'Buckwheat Boyz, The Buckwheat Boyz was an American novelty group founded by Marcus Bowens and Jermaine Fuller, with the later addition of J.J. ONeal and Dougy Williams. The Buckwheat Boyz were signed by Koch Records, and recorded their first and only full-length record. The 2001 single Peanut Butter Jelly Time from this self-titled debut album became a popular internet meme after a Flash-animated music video featuring a dancing banana garnered attention online. The popularity of the song increased as it was featured on television series such as The Proud Family and Family Guy, and fellow Flash-animated series including Super Mario Bros. Z.', 'summary_clean': nan, 'point_value': 23}\n"
+      "{'title': 'BRAHMA Force: The Assault On Beltlogger 9', 'summary': 'BRAHMA Force: The Assault On Beltlogger 9, BRAHMA Force: The Assault on Beltlogger 9, known in Japan as Beltlogger 9 9, Berutorog 9, and in Europe as BRAHMA Force, is a video game developed by Genki for the PlayStation in 1996-1998. It was announced by Genki as the official successor to their Kileak series.', 'related': 39, 'summary_short': 'BRAHMA Force: The Assault On Beltlogger 9, BRAHMA Force: The Assault on Beltlogger 9, known in Japan as Beltlogger 9 9, Berutorog 9, and in Europe as BRAHMA Force, is a video game developed by Genki for the PlayStation in 1996-1998. It was announced by Genki as the official successor to their Kileak series.', 'summary_clean': nan, 'point_value': 39}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  6%|▋         | 439/6803 [00:14<02:28, 42.79it/s]"
+      " 23%|██▎       | 1743/7572 [01:10<02:40, 36.21it/s]"
      ]
     }
    ],
