--- a/balancing_the_deck.ipynb
+++ b/balancing_the_deck.ipynb
@@ -1270,6 +1270,24 @@
     "    os.mkdir(balanced_card_box)\n",
     "# sample from each cluster equally and add the corresponding images (currently in the new_card_box folder) to a new folder called balanced_card_box that is in the same directory as the new_card_box folder\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['character']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# show me the categories and their counts in the unbaised dataset\n",
+    "print(categories)"
+   ]
   }
  ],
  "metadata": {
